cluster/home/traefik-internal/dashboard/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik-internal
spec:
  basicAuth:
    secret: traefik-dashboard-auth
