cluster/home/traefik-internal/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-internal
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-internal.local.cjsolsen.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik-internal
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-internal-cjsolsen-com-tls
